MODUSERBL-234 Update NEWS.md